# ddui

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  link_ddui_to_airflow.py  setup.cfg  setup.py
ci/: Jenkinsfile  docker-compose.yml  run_docker.sh  test_requirements.txt
ci/docker/: Dockerfile
ddui/: dash_app.py  dash_components.py  orm.py  plot.py  plugin.py  views.py
ddui/static/brian/: dd.css
ddui/templates/brian/: dash.html
tests/: conftest.py  test_dash_app.py  test_link_ddui_to_airflow.py  test_orm.py  test_plot.py  test_views.py
tests/dags/: dag_with_output_table_example.py
tests/dev_tools/: run_webserver.py
