[metadata]
name = ddui
version = 3.0.5.dev0

[zest.releaser]
no-input = yes
release = no
create-wheel = no

[bdist_wheel]
universal = 1

[build-system]
requires = setuptools; wheel>=0.31.*

[options]
py_modules = link_ddui_to_airflow
install_requires =
    pandas
    jinja2>=2.7.3, <2.9.0
    flask<0.13,>=0.12.4
    apache-airflow==1.10.*
    click
    dash == 0.37.*
    dash_html_components==0.13.*
    dash_core_components==0.43.*
    dash-dagre>=0.0.2
    dash_table==3.4.*

include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    ddui = link_ddui_to_airflow:cli

[tool:pytest]
python_files = *tests/*.py
norecursedirs = tests/dev_tools*
junit_suite_name = reports/coverage.xml

filterwarnings =
    ignore::Warning

addopts =
    --cov=ddui
    --cov-append
    --cov-report html:reports
    --cov-report xml:reports/coverage.xml
    --junitxml=reports/xunit_reports.xml